--- a/front/src/app/app.component.html
+++ b/front/src/app/app.component.html
@@ -1,10 +1,8 @@
-<div class="example-container">
+<div class="main-container">
   <mat-toolbar color="primary" class="toolbar-container">
-    <app-header style="width: 100%"></app-header>
+    <app-header></app-header>
   </mat-toolbar>
-
   <router-outlet></router-outlet>
-
 </div>
 
 
