--- a/front/src/app/core/list/list.component.scss
+++ b/front/src/app/core/list/list.component.scss
@@ -1,3 +1,7 @@
 .example-button {
   width: 400px;
 }
+
+.mat-card:not([class*=mat-elevation-z]) {
+  box-shadow: 0 3px 1px -2px rgba(0,0,0,0), 0 2px 2px 0 rgba(0,0,0,0), 0 1px 5px 0 rgba(0,0,0,0);
+}
